# patient-data-analyze

./: .gitignore  README.md  finetune_llm.py  generate_datasheets.py  main.py  pyproject.toml
compute_patient_data/: compute_follow_up_persistence.py  compute_output_data.py  compute_persistence.py  sum_importomov.py
data/: Z2 estrazione dati antiemicranici 10-5-24 - 19-9-24 - con PDD - per invio.adjusted.xls
functions/: compute_adherence_numerator.py  compute_delays.py  compute_follow_up_persistence.py  compute_follow_up_persistency.py  compute_minsan_changes.py  compute_ouptput_data.py  compute_persistency.py  dir_path.py  first_prod.py  sum_importomov.py
generate_datasheets/: __main__.py  compute_average_days.py  compute_ouptput_data.py
output/predict_data/: output_46925018.csv  output_46925044.csv  output_47424015.csv  output_global.csv
output/training_data/: output_global.csv
predict_patient_data/: generate_prompt.py  load_accelerator.py  load_model_config.py  load_tokenizer.py  print_trainable_parameters.py  retrieve_output_data.py  summarize_adherence_columns.py  tokenize_input.py  train_model.py
src/: compare_results.py  constants.py  finetune_llm.py  generate_datasheets.py  predict_compare.py  predict_with_llm.py
src/compute_patient_data/: compute_average_days.py  compute_delays.py  compute_follow_up_persistence.py  compute_output_data.py  compute_persistence.py
src/predict_patient_data/: generate_prediction_prompt.py  generate_prompt.py  load_model_config.py  load_tokenizer.py  retrieve_output_data.py
utils/: round_n.py
(+1 files in other folders)
