[project]
authors = [
    {name="Florian Monfort", email="fmonfort@enssat.fr"},
]
name = "patient-data-analyse"
description = "Analyzing efficiency of patient therapies based on data in an Excel file and exporting computed results in CSV files, then fine-tuning an LLM to predict adherence and follow-up persistence of treatments on patients based on their demographic information"
dependencies = [
    "pandas",
    "openpyxl",
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
llm = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "peft",
    "torch",
    "transformers",
]
quality = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pylint",
]
test = ["pytest"]
